[package]
name = "kamu-oracle-provider"
description = "Oracle provider that uses Kamu Node to supply data to blockchain smart contracts"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[dependencies]
# TODO: alloy is not yet being released on crates.io
# See: https://github.com/alloy-rs/alloy/issues/791
alloy = { version = "0.1", git = "https://github.com/alloy-rs/alloy", rev = "a81f9e1e80e677a8f78b592657ffba607a0098b9", default-features = false, features = [
    "std",
    "contract",
    "node-bindings",
    "provider-http",
    "provider-ws",
    "rpc-types-eth",
    "signer-wallet",
    "sol-types",
] }
async-trait = { version = "0.1", default-features = false }
clap = { version = "4", default-features = false, features = [
    "std",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
    "cargo",
    # "env",
    "wrap_help",
] }
ciborium = { version = "0.2", default-features = false }
confique = { version = "0.2", default-features = false, features = ["yaml"] }
http = { version = "0.2", default-features = false }
internal-error = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "brotli",
    "deflate",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
tracing = { version = "0.1", default-features = false, features = [] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "std",
] }
thiserror = { version = "1", default-features = false }
url = { version = "2", default-features = false, features = ["serde"] }


[dev-dependencies]
hex = { version = "0.4" }
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
