[package]
name = "kamu-oracle-provider"
description = "Oracle provider that uses Kamu Node to supply data to blockchain smart contracts"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lib]
doctest = false


[dependencies]
graceful-shutdown = { workspace = true, default-features = false }
observability = { workspace = true, default-features = false, features = [
    "opentelemetry",
    "prometheus",
] }
odf = { workspace = true, default-features = false }

alloy = { version = "0.9", default-features = false, features = [
    "std",
    "contract",
    "network",
    "node-bindings",
    "provider-http",
    "provider-ws",
    "rpc-types-eth",
    "signer-local",
    "sol-types",
] }
async-trait = { version = "0.1", default-features = false }
axum = { version = "0.7", default-features = false, features = [
    "http1",
    "tokio",
] }
chrono = { version = "0.4", default-features = false }
clap = { version = "4", default-features = false, features = [
    "std",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
    "cargo",
    # "env",
    "wrap_help",
] }
ciborium = { version = "0.2", default-features = false }
confique = { version = "0.3", default-features = false, features = ["yaml"] }
dill = { version = "0.10", default-features = false }
duration-string = { version = "0.4", default-features = false, features = [
    "serde",
] }
hex = { version = "0.4" }
http = { version = "1", default-features = false }
internal-error = { workspace = true }
prometheus = { version = "0.13", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "brotli",
    "deflate",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
strum = { version = "0.26", default-features = false, features = [
    "std",
    "derive",
] }
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
] }
tracing = { version = "0.1", default-features = false, features = [] }
thiserror = { version = "2", default-features = false }
url = { version = "2", default-features = false, features = ["serde"] }


[dev-dependencies]
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
