[package]
name = "email-gateway"
description = "General purpose email gateway"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false

[features]
default = []
postmark = []
testing = []


[dependencies]
email-utils = { workspace = true }
internal-error = { workspace = true }

async-trait = "0.1"
dill = { version = "0.15", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
secrecy = "0.10"
serde = { version = "1", default-features = false }
serde_json = "1"
thiserror = { version = "2", default-features = false, features = ["std"] }
tracing = "0.1"


[dev-dependencies]
