[package]
name = "observability"
description = "Utilities for tracing and structured logging"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
async-trait = { version = "0.1" }
axum = { version = "0.6", default-features = false, features = [
    "json",
    "matched-path",
    "query",
] }
dill = { version = "0.8", default-features = false }
http = { version = "0.2", default-features = false }
opentelemetry = { version = "0.23", default-features = false }
opentelemetry_sdk = { version = "0.23", default-features = false, features = [
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.16", default-features = false, features = [
    "trace",
    "grpc-tonic",
] }
opentelemetry-semantic-conventions = { version = "0.16", default-features = false }
prometheus = { version = "0.13", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
thiserror = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2", default-features = false }
tracing-opentelemetry = { version = "0.24", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.4", default-features = false, features = ["trace"] }


[dev-dependencies]
