[package]
name = "kamu-repo-tools"
description = "Tools for managing this repo"
version = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[[bin]]
name = "release"
path = "src/release.rs"


[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", default-features = false, features = ["std"] }
glob = { version = "0.3", default-features = false }
pretty_assertions = { version = "1" }
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
semver = { version = "1", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse"] }


[dev-dependencies]
glob = { version = "0.3", default-features = false }
grep-regex = "0.1"
grep-searcher = "0.1"
indoc = "2"
