[package]
name = "kamu-node-e2e-repo-tests"
description = "Shared repository with E2E tests for kamu-node"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[lints]
workspace = true


[lib]
doctest = false


[dependencies]
kamu-cli-e2e-common = { workspace = true }
kamu-node-e2e-common = { workspace = true }
kamu-adapter-http = { workspace = true }
kamu-accounts = { workspace = true }
odf = { workspace = true }

indoc = "2"
pretty_assertions = { version = "1" }
reqwest = { version = "0.12", default-features = false, features = [] }
serde_json = { version = "1", default-features = false }


[dev-dependencies]